# xandergraph

./: .gitignore  LICENSE  README.md  bwyd.stottr  demo.py  kg.py  pyproject.toml
ottr/: README.md
xandergraph/ottr/: __init__.py
