[project]

name = "xander-graph"
description = "used internally for graph representation and system integration"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Paco Nathan", email = "paco@derwen.ai" }
]

version = "0.1.0"
requires-python = ">=3.13"

include = [
    "LICENSE"
]

dependencies = [
    "icecream (>=2.2,<3.0)",
    "pyparsing (>=3.3.2,<4.0)",
    "pyshacl (>=0.40,<1.0)",
    "rdflib (>=7.6,<8.0)",
]


[dependency-groups]

test = [
     "mypy (>=2.1,<3.0)",
     "pylint (>=4.0,<5.0)",
     "pytest (>=9.0,<10.0)",
]


[build-system]

requires = [ "poetry-core>=2.0,<3.0" ]
build-backend = "poetry.core.masonry.api"
